--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,11 @@
 body {
     background-color: lawngreen;
 }
-
 h1 {
-    float: center;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 25px;
+    font-style: italic;
+    font-weight: 500;
+    text-align-last: center;
+    text-decoration-line: underline;
 }
