--- a/css/style.css
+++ b/css/style.css
@@ -12,3 +12,10 @@ h1 {
 h2 {
     float: right;
 }
+p {
+    color: blueviolet;
+    font-family: Arial, Helvetica, sans-serif;
+}
+ul {
+    color: brown;
+}
