--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ h1 {
     text-decoration-line: underline;
 }
 h2 {
-    float: right;
+    text-align:right;
 }
 p {
     color: blueviolet;
@@ -18,4 +18,12 @@ p {
 }
 ul {
     color: brown;
+}
+
+#active{
+    background: blueviolet;
+}
+
+.menu-item{
+    
 }
