--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
 }
 h1 {
     font-family: 'Times New Roman', Times, serif;
-    font-size: 25px;
+    font-size: 50px;
     font-style: italic;
     font-weight: 500;
     text-align-last: center;
@@ -11,6 +11,7 @@ h1 {
 }
 h2 {
     text-align:right;
+    color: black;
 }
 p {
     color: blueviolet;
